! Fixed a few plugin errors. + Added a version for css/scripts allowing for easier updating. ! Fixed New Icons not working on ticket index. ! Fixed Page Index not showing the correct pages (Fixes #31)

--- a/css/helpdesk.css
+++ b/css/helpdesk.css
@@ -135,6 +135,18 @@ dd#assigned_button
 	padding: 1px 0;
 }
 
+span.shd_new_tickets
+{
+	margin-left: 5px;
+    padding: 1px 5px 3px 4px;
+}
+
+/* The page index color looks ugly with our theme. */
+.shd_main_hd .cat_bar .current_page
+{
+	color: #fff;
+}
+
 /**********************************
 * Stuff used within the actual tickets 	*
 ***********************************/
